  [Shreyasvi Chandrasekhar]
  * Added a new GMPE for significant duration proposed by Bahrampouri et al 
    2021 in gsim.
  * created tests and verification tables for bahrampouri_2021_duration model.

  [Claudia Mascandola]
  * Added the computation of tau and phi stdevs to the sgobba_2020 GMPE
  * Added a new class to the lanzano_2019 gmm.

  [Michele Simionato]
  * Changed completely the storage of the PoEs and reduced the memory
    consumption in classical calculations (plus a 4x speedup in "postclassical")
  * Changed the behavior of `sites_slice`
  * Changed `custom_site_id` to an ASCII string up to 6 characters
  * Fixed the error raised in presence of a mag-dep distance for a tectonic
    region type and a scalar distance for another one

  [Yen-Shin Chen]
  * Added the Thingbaijam et al. (2017) Magnitude Scaling Law for Strike-slip

  [Michele Simionato]
  * Changed the API of `ContextMaker.get_mean_stds`
  * Extended the WebUI to run sensitivity analysis calculations
  * Changed the string representation of logic tree paths and enforced a
    maximum of 64 branches per branchset
  * Added command `oq info disagg`
  * Accepted site models with missing parameters by using the global site
    parameters instead
  * Supported the syntax
    `source_model_logic_tree_file = ${mosaic}/XXX/in/ssmLT.xml`
  * Fixed a performance bug with ignore_master_seed=true
  * Added a command `oq info cfg` to show the configuration file paths
  * Added a check on the intensity measure levels with `--hc` is used
  * Bug fix: pointsource_distance = 0 was not honored
  * Added a warning in case of global duplicated branch IDs in the gsim logic
    tree file
  * Fixed a small bug of `oq zip job_haz.ini -r job_risk.ini`
  * Optimized the aggregation of losses in event_based_risk and made it possible
    to aggregate by site_id for more than 65,536 sites
  * Fixed the calculation of average insured losses with a nontrivial taxonomy