@@ -20,6 +20,8 @@ serialize_jobs = 1
 # num_cores = 1
 # log level for jobs spawned by the WebAPI
 log_level = info
+submit_cmd =
+min_input_size = 1_000_000
 
 [memory]
 # use at most 1 TiB for the poes
