@@ -1,5 +1,8 @@
+  [Michele Simionato]
+  * Internal: added kubernetes support from the WebUI
+
   [Shreyasvi Chandrasekhar]
-  * Added a new GMPE for significant duration proposed by Bahrampouri et al 
+  * Added a new GMPE for significant duration proposed by Bahrampouri et al
     2021 in gsim.
   * created tests and verification tables for bahrampouri_2021_duration model.
 
